# compose

./: .dockerignore  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  auth-demo.html  demo-auth.html  demo.html  install.sh  pyproject.toml  setup.cfg
.github/: codecov.yml  mergify.yml
.github/workflows/: black.yml  codecov.yml  isort.yml  pyci.yml  query-e2e.yml
compose/: manage.py  requirements.txt
compose-ui/: index.html
compose-ui/sql-scratchpad/: README.md
compose-ui/sql-scratchpad/src/: index.css
compose-ui/sqls/: README.md  index.html  package.json
compose/conf/: settings.py  urls.py
compose/connectors/: api.py  apps.py  urls.py  urls_hue4.py
compose/core/: asgi.py  settings.py  urls.py  wsgi.py
compose/docker/: Dockerfile  local_settings.py  startup.sh
compose/editor/: api.py  api_tests.py  apps.py  sql_alchemy.py  sql_alchemy_test.py  urls.py  urls_hue4.py
compose/editor/executors/: exceptions.py  executor.py  sql_alchemy.py
designs/: concepts.md
docker/: startup.sh
docs/: LICENSE-header.txt
docs/designs/: concepts.md
hue/: pyproject.toml  requirements.txt  setup.cfg
hue/core/: asgi.py  settings.py  urls.py  wsgi.py
hue/docker/: Dockerfile  startup.sh
hue/editor/: api.py  sql_alchemy.py  sql_alchemy_test.py  urls.py  views.py
hue/hue5/: asgi.py  settings.py  urls.py  wsgi.py
hue5/: manage.py  requirements.txt
hue5/docker/: Dockerfile  startup.sh
hue5/editor/: api.py  sql_alchemy.py  urls.py  views.py
hue5/hue5/: asgi.py  settings.py  urls.py  wsgi.py
tests/editor/: api_test.py
(+10 files in other folders)
