[metadata]
name = gethue
version = 0.0.3
author = Gethue
author_email = team@gethue.com
description = Open source SQL Query Assistant for Databases/Warehouses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gethue/compose
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
